--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "locus": "^2.0.1",
     "method-override": "^2.3.10",
     "mongoose": "^4.13.7",
     "morgan": "^1.9.0"
